Add links to navigation through pages
* Add links to docs
* Add links to external `middleman-directory` project

--- a/source/community.html.erb
+++ b/source/community.html.erb
@@ -39,7 +39,8 @@ layout: layout
               <%= t("contributions.extensions.description") %>
             </p>
             <p class="contributions-feature-link">
-              <%= link_to t("contributions.extensions.link_text"), "/" %>
+              <%= link_to t("contributions.extensions.link_text"),
+                "http://directory.middlemanapp.com/#/extensions/all" %>
             </p>
           </div>
         </div>
@@ -55,7 +56,8 @@ layout: layout
               <%= t("contributions.templates.description") %>
             </p>
             <p class="contributions-feature-link">
-              <%= link_to t("contributions.templates.link_text"), "/" %>
+              <%= link_to t("contributions.templates.link_text"),
+                "http://directory.middlemanapp.com/#/templates/all" %>
             </p>
           </div>
         </div>
@@ -71,7 +73,8 @@ layout: layout
               <%= t("contributions.deployment.description") %>
             </p>
             <p class="contributions-feature-link">
-              <%= link_to t("contributions.deployment.link_text"), "/" %>
+              <%= link_to t("contributions.deployment.link_text"),
+                "http://directory.middlemanapp.com/#/deployment/all" %>
             </p>
           </div>
         </div>
