--- a/source/layouts/_documentation_nav.erb
+++ b/source/layouts/_documentation_nav.erb
@@ -4,8 +4,7 @@
     <h3 class="docs-section-heading"><%= t("navigation.basics.title") %></h3>
     <ul>
       <li class="doc-item">
-      <%= active_link_to  t("navigation.basics.install"), "#{locale_prefix}/basics/install"%>
-      </li>
+      <%= active_link_to  t("navigation.basics.install"), "#{locale_prefix}/basics/install"%> </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.basics.start_new_site"), "#{locale_prefix}/basics/start_new_site" %>
       </li>
