--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -7,7 +7,7 @@ layout: layout
   <section class="body-content-container wrap-container" data-waypoint="hero-content">
     <%= link_to image_tag("middleman-logo.svg"), "#{locale_prefix}/",
 
-      class: "headline-content-logo" %>
+      class: "hero-content-logo" %>
 
     <h2 class="hero-headline"><%= t("index.headline") %></h2>
     <h3 class="hero-description"><%= t("index.description") %></h3>
