Connect sites using Middleman page to rest of website
* Add styles to site built but need to fix sticky
* Modify sticky sidebar by using fixed widths
* Rename `waypoints` tag class to `aside.sidebar-container`
* Refactor `#toc` into separate `sidebar` file
* Layout is *not responsive*
* Use new syntax for symbols

--- a/source/layouts/example.erb
+++ b/source/layouts/example.erb
@@ -4,8 +4,8 @@
   </header>
 
   <div class="body-content-container wrap-container">
-    <nav id="toc" class="sidebar" data-waypoint="sidebar">
-      <%= partial 'partials/documentation_nav' %>
+    <nav class="sidebar" data-waypoint="sidebar">
+      <%= partial 'partials/sites_built_with_nav' %>
     </nav>
 
     <main class="main" role="main" data-waypoint="main">
