--- a/source/partials/_logos.html.erb
+++ b/source/partials/_logos.html.erb
@@ -20,7 +20,9 @@
       </ul>
       <ul class="centered-content">
         <li class="community-social-link-item">
-          <%= link_to "See All Middleman Sites", "/community/built-using-middleman", class: "community-social-link" %>
+        <%= link_to "See All Middleman Sites",
+          "#{locale_prefix}/community/built_using_middleman", class:
+          "community-social-link" %>
         </li>
       </ul>
     </article>
