--- a/source/stylesheets/modules/_modules.scss
+++ b/source/stylesheets/modules/_modules.scss
@@ -1,6 +1,8 @@
 @import "layout";
 @import "global-nav";
+@import "sidebar";
 @import "documentation-nav";
+@import "built-with-middleman";
 @import "browser";
 @import "community";
 @import "footer";
