--- a/source/layouts/_site.erb
+++ b/source/layouts/_site.erb
@@ -1,4 +1,4 @@
-<li>
+<li class="built-with-middleman-list-item">
   <%= link_to site.title || site.url, site.url, class: "built-with-middleman-link" %>
   <% if site.source %>
     <%= link_to t("built.source_code"), site.source, class: "source-code-link" %>
