Replace second introduction item with illustration

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -63,8 +63,8 @@ layout: layout
         </div>
         <div class="introduction-item-graphic-wrapper">
           <div class="introduction-browser browser">
-            <div class="introduction-browser-body browser-body">
-              <div class="browser-text-editor-sidebar">
+            <div class="introduction-browser-body">
+              <div class="browser-text-editor">
               </div>
             </div>
           </div>
