--- a/source/stylesheets/modules/_documentation-nav.scss
+++ b/source/stylesheets/modules/_documentation-nav.scss
@@ -1,6 +1,11 @@
 .toc-block-container {
+  display: none;
   height: 100vh;
   overflow: scroll;
+
+  @include media($medium-screen-up) {
+    display: block;
+  }
 }
 
 #search {
