--- a/source/stylesheets/modules/_sidebar.scss
+++ b/source/stylesheets/modules/_sidebar.scss
@@ -4,11 +4,25 @@
   padding-bottom: .75em;
   padding-top: .75em;
 
-  &.stuck {
-    position: fixed;
-    top: 0;
-    white-space: normal;
-    width: $sidebar-width;
-    word-wrap: break-word;
+  @include media($medium-screen-up) {
+    &.stuck {
+      position: fixed;
+      top: 0;
+      white-space: normal;
+      width: $medium-sidebar-width;
+      word-wrap: break-word;
+    }
+  }
+
+  @include media($large-screen-up) {
+    &.stuck {
+      width: $large-sidebar-width;
+    }
+  }
+
+  @include media($larger-screen-up) {
+    &.stuck {
+      width: $larger-sidebar-width;
+    }
   }
 }
