--- a/source/stylesheets/modules/landing/_introduction.scss
+++ b/source/stylesheets/modules/landing/_introduction.scss
@@ -39,6 +39,11 @@
 .introduction-item-graphic-wrapper {
   order: 1;
   margin: 0 auto;
+  width: 100%;
+
+  @include media($medium-screen-up) {
+    @include span-columns(6 of 12);
+  }
 }
 
 .introduction-item-text-wrapper {
@@ -53,7 +58,7 @@
 }
 
 .introduction-browser {
-  width: em(300);
+  @include fill-parent;
 
   @include media($medium-screen-up) {
     width: auto;
