Add speech bubble icon to main section of community page

--- a/source/community.html.erb
+++ b/source/community.html.erb
@@ -6,6 +6,8 @@ layout: layout
 
 <div class="body-content-container">
   <section class="community-preview wrap-container">
+    <div class="community-main-icon">
+    </div>
     <h1 class="community-main-title">
       <%= t("community.title") %>
     </h1>
