--- a/source/community.html.erb
+++ b/source/community.html.erb
@@ -37,13 +37,9 @@ layout: layout
             <h5 class="contributions-feature-header">
               <%= t("contributions.extensions.header") %>
             </h5>
-            <p class="contributions-feature-text">
-              <%= t("contributions.extensions.description") %>
-            </p>
-            <p class="contributions-feature-link">
-              <%= link_to t("contributions.extensions.link_text"),
-                "http://directory.middlemanapp.com/#/extensions/all" %>
-            </p>
+            <p><%= t("contributions.extensions.description") %></p>
+            <%= link_to t("contributions.extensions.link_text"),
+              "http://directory.middlemanapp.com/#/extensions/all", class: "cta-link-body" %>
           </div>
         </div>
         <div class="contributions-feature-item">
@@ -54,13 +50,9 @@ layout: layout
             <h5 class="contributions-feature-header">
               <%= t("contributions.templates.header") %>
             </h5>
-            <p class="contributions-feature-text">
-              <%= t("contributions.templates.description") %>
-            </p>
-            <p class="contributions-feature-link">
-              <%= link_to t("contributions.templates.link_text"),
-                "http://directory.middlemanapp.com/#/templates/all" %>
-            </p>
+            <p><%= t("contributions.templates.description") %></p>
+            <%= link_to t("contributions.templates.link_text"),
+              "http://directory.middlemanapp.com/#/templates/all", class: "cta-link-body" %>
           </div>
         </div>
         <div class="contributions-feature-item">
@@ -71,13 +63,9 @@ layout: layout
             <h5 class="contributions-feature-header">
               <%= t("contributions.deployment.header") %>
             </h5>
-            <p class="contributions-feature-text">
-              <%= t("contributions.deployment.description") %>
-            </p>
-            <p class="contributions-feature-link">
-              <%= link_to t("contributions.deployment.link_text"),
-                "http://directory.middlemanapp.com/#/deployment/all" %>
-            </p>
+            <p><%= t("contributions.deployment.description") %></p>
+            <%= link_to t("contributions.deployment.link_text"),
+              "http://directory.middlemanapp.com/#/deployment/all", class: "cta-link-body" %>
           </div>
         </div>
       </article>
@@ -92,7 +80,7 @@ layout: layout
         </div>
       </div>
       <div class="forum-text-wrapper">
-        <h4 class="forum-item-header">
+        <h4 class="contributions-title forum-item-header">
           <%= t("community.forum.header") %>
         </h4>
         <p class="forum-item-text">
