--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <%= stylesheet_link_tag "site" %>
     <link href="http://fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet" type="text/css">
+    <link href='http://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
     <title><%= page_title %></title>
   </head>
   <body>
