--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -14,7 +14,7 @@
       </li>
       <li class="global-nav-item">
         <%= link_to t("navigation.docs"),
-          "#{locale_prefix}/basics/install/", class: "cta-link" %>
+          "#{locale_prefix}/basics/install/", class: "cta-link-nav" %>
       </li>
     </ul>
   </section>
