--- a/source/partials/_logos.html.erb
+++ b/source/partials/_logos.html.erb
@@ -1,6 +1,6 @@
 <section class="logos"> 
   <div class="wrap-container">
-    <h4 class="logos-title centered-content">
+    <h4 class="contributions-title centered-content">
       <%= t("community.built_using_middleman") %>
     </h4>
     <article class="logo-block">
