--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -10,7 +10,7 @@ $sans-serif: "Lato", $helvetica;
 $serif: $georgia;
 $base-font-family: $sans-serif;
 $header-font-family: $base-font-family;
-$monospace-font-family: "Fira Mono", "lucida console", monospace;
+$monospace-font-family: "Source Code Pro", "lucida console", monospace;
 
 // Font Sizes
 $base-font-size: 1em;
@@ -46,7 +46,8 @@ $light-yellow: #FFF6BF;
 $light-green: #E6EFC2;
 
 // Middleman colors
-$golden-yellow: #ECC561;
+$golden-yellow: #F3C859;
+$golden-yellow-dark: #B69642;
 $navy: #446184;
 $slate-gray: #8990A1;
 $translucent-gray: rgba(black, 0.25);
@@ -89,7 +90,7 @@ $github-icon: "\f09b";
 $twitter-icon: "\f099";
 
 // Browser Colors
-$browser-bar-color: #E3E0E0;
+$browser-bar-color: #DEDEDE;
 $browser-body-color: $dark-gray;
 
 // Global Nav Variables
