--- a/source/stylesheets/modules/_community.scss
+++ b/source/stylesheets/modules/_community.scss
@@ -14,51 +14,42 @@
 
 .contributions-title {
   color: $dark-gray;
+  font-size: $base-font-size * 1.5;
   padding-bottom: 1em;
 
   @include media($medium-screen-up) {
-    padding-bottom: 3em;
-    margin-top: 4em;
+    padding-bottom: 1em;
   }
 }
 
 .contributions-feature-header {
   color: $dark-gray;
-  font-size: $base-font-size * 1.15;
+  font-size: $base-font-size * 1.2;
   margin: 0.5em 0;
-}
-
-.contributions-feature-text {
-  font-size: $base-font-size;
-}
-
-.contributions-feature-link {
-  font-size: $base-font-size;
-  margin-bottom: 0em;
 }
 
 .community-cta {
   @include button-filled($secondary-accent-color);
 }
 
-.contributions-feature-icon-wrapper {
-  @include span-columns(1 of 4);
-}
-
-.contributions-feature-text-wrapper {
-  @include span-columns(3 of 4);
+.contributions-feature-icon-wrapper img {
+  width: 6rem;
 }
 
 .contributions-feature-item {
-  padding: 1em 0;
+  @include span-columns(3 of 4);
+  @include shift(1.5);
   margin-bottom: 2em;
+  padding: 1em 0;
+  text-align: center;
 
   &:last-child {
     margin-bottom: 0;
   }
 
-  @include media($medium-screen-up) {
+  @include media($large-screen-up) {
     @include span-columns(4 of 12);
+    @include shift(0);
     margin-bottom: 0;
   }
 }
@@ -99,37 +90,21 @@
 
 }
 .forum-text-wrapper {
+  color: white;
   text-align: center;
-  margin: 0 auto;
+
+  .contributions-title {
+    color: white;
+  }
 
   @include media($medium-screen-up) {
-    margin-top: 4em;
     text-align: left;
   }
 }
 
-.forum-item-header {
-  color: white;
-  margin-bottom: 1em;
-
-  @include media($medium-screen-up) {
-    margin: 0 0 1em;
-  }
-}
-
 .forum-item-text {
-  color: white;
   font-size: $base-font-size;
   padding: 0 0 1em;
-
-  &:last-child {
-    padding-bottom: 0;
-    margin-bottom: 0;
-  }
-
-  @include media($medium-screen-up) {
-    padding: 1em 0;
-  }
 }
 
 .forum-cta {
