--- a/source/partials/_global_nav.erb
+++ b/source/partials/_global_nav.erb
@@ -10,7 +10,7 @@
     <ul class="global-nav-list">
       <li class="global-nav-item">
         <%= link_to t("navigation.contribute"),
-          "#{locale_prefix}/community" %>
+          "#{locale_prefix}/community/" %>
       </li>
       <li class="global-nav-item">
         <%= link_to t("navigation.docs"),
