--- a/source/partials/_logos.html.erb
+++ b/source/partials/_logos.html.erb
@@ -17,8 +17,8 @@
       </ul>
       <ul class="centered-content">
         <li class="community-social-link-item">
-        <%= link_to "See All Middleman Sites",
-          "#{locale_prefix}/community/built_using_middleman", class:
+        <%= link_to t("index.see_middleman_sites"),
+          "#{locale_prefix}/community/built_using_middleman/", class:
           "community-social-link" %>
         </li>
       </ul>
