--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -40,7 +40,7 @@ layout: layout
     <p class="intro"><%= t("index.description") %> <%= link_to t("index.getting_started"), "#{locale_prefix}/basics/getting-started/" %>.</p>
     <p class="intro sns">
       <span><i class="icon-github"> <%= link_to 'Watch', 'https://github.com/middleman/middleman' %></i></span>
-      <span><i class="icon-twitter"> <%= link_to 'Follow @middlemanapp', 'http://twitter.com/middlemanapp' %></i></span>
+      <span><i class="icon-twitter"> <%= link_to 'Follow @middlemanapp', 'https://twitter.com/middlemanapp' %></i></span>
     </p>
 
     <nav class="grid">
