--- a/source/partials/_documentation_nav.erb
+++ b/source/partials/_documentation_nav.erb
@@ -86,16 +86,16 @@
     <h3 class="docs-section-heading"><%= t("navigation.community.title") %></h3>
     <ul>
       <li class="doc-item">
-        <%= active_link_to t("navigation.community.custom_extensions"), "http://directory.middlemanapp.com/#/extensions/all/" %>
+        <%= active_link_to t("navigation.community.custom_extensions"), "https://directory.middlemanapp.com/#/extensions/all/" %>
       </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.community.project_templates"), "http://directory.middlemanapp.com/#/templates/all/" %>
+        <%= active_link_to t("navigation.community.project_templates"), "https://directory.middlemanapp.com/#/templates/all/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.community.deployment_solution"), "http://directory.middlemanapp.com/#/extensions/deployment/" %>
+        <%= active_link_to t("navigation.community.deployment_solution"), "https://directory.middlemanapp.com/#/extensions/deployment/" %>
         </li>
       <li class="doc-item">
-        <%= active_link_to t("navigation.community.community_forum"), "http://forum.middlemanapp.com/", target: "_blank"%>
+        <%= active_link_to t("navigation.community.community_forum"), "https://forum.middlemanapp.com/", target: "_blank"%>
         </li>
       <li class="doc-item">
         <%= active_link_to t("navigation.community.github"), "https://github.com/middleman/middleman", target: "_blank" %>
