Fix unnecessary scrollbars [ci skip]

--- a/source/stylesheets/base/_typography.scss
+++ b/source/stylesheets/base/_typography.scss
@@ -102,5 +102,5 @@ code {
   font-family: $monospace-font-family;
   font-size: 1rem;
   padding:  0.05em 0.5em;
-  overflow: scroll;
+  overflow: auto;
 }
