Use search input type for docs search

--- a/source/partials/_documentation_search.erb
+++ b/source/partials/_documentation_search.erb
@@ -1,9 +1,9 @@
 <div id="search">
   <form>
-    <input type="text" id="st-search-input" class="st-search-input" placeholder="Search the docs" />
+    <input class="st-search-input" id="st-search-input" type="search" placeholder="Search the docs">
   </form>
   <div id="st-results-container"></div>
-  <script type="text/javascript">
+  <script>
     var Swiftype = window.Swiftype || {};
     (function() {
     Swiftype.key = 'q3qjGN5LmX2oq6w1V47y';
