--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <%= stylesheet_link_tag "site" %>
-    <link href="//fonts.googleapis.com/css?family=Lato:400,700" rel="stylesheet">
-    <link href="//fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <title><%= page_title %></title>
+    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic|Source+Code+Pro">
+    <%= stylesheet_link_tag "site" %>
   </head>
   <body>
     <%= yield %>
