Use en dash for copyright

--- a/source/localizable/_footer.html.erb
+++ b/source/localizable/_footer.html.erb
@@ -3,7 +3,7 @@
     <div class="footer-column">
       <article class="footer-site-information">
         <p>
-          &copy; 2011-2015 <%= link_to "Thomas Reynolds", "http://awardwinningfjords.com" %>
+          &copy; 2011&ndash;2015 <%= link_to "Thomas Reynolds", "http://awardwinningfjords.com" %>
         </p>
         <p class="footer-open-source-credit">
           Maintained by the <%= link_to "core team",
